--- a/Algorithm/문자열.md
+++ b/Algorithm/문자열.md
@@ -28,7 +28,70 @@
 
   In python, (1) string -> list 변환, (2) swap, (3) list -> string 변환
 
+- 문자열 비교
+
+  - 파이썬에서 == 연산자와 is 연사자 제공
+    - ==연산자는 내부적으로 특수 메서드 `__eq__()`호출 (연산자 오버로딩)
+
+- 문자열 숫자를 정수로 변환하기
+
+  - 파이썬에서 숫자와 문자변환 함수를 제공
+
+    - int, float, repr, str
+
+    - ```python
+      print(eval("1+2"))
+      >> 3
+      print(eval(repr("1+2")))
+      >> 1+2
+      print(eval(eval(repr("1+2"))))
+      >> 3
+      ```
+
+      
+
 ### 패턴 매칭
+
+- 고지식한 알고리즘(Brute Force)
+
+  - 문자열을 처음부터 끝까지 차례대로 순회하면서 패턴 내의 문자들을 일일이 비교
+
+  - 최악의 경우 텍스트의 모든 위치에서 패턴 비교 -> O(MN)
+
+    ```python
+    p = "is" # 찾을 패턴
+    t = "This is a book~!" # 전체 텍스트
+    M = len(p) # 찾을 패턴의 길이
+    N = len(t) # 전체 텍스트의 길이
+    
+    def BruteForce(p, t):
+        i = 0
+        j = 0
+        while j < M and i < N:
+            if t[i] != p[j]:
+                i = i - j
+                j = -1
+            i = i + 1
+            j = j + 1
+        if j == M: return i - M # 검색 성공
+        else: return -1 # 검색 실패
+    
+    print(BruteForce(p, t))
+    ```
+
+    
+
+- KMP 알고리즘
+
+  - Brute Force에서 불일치가 발생한 경우, 앞부분에 어떤 문자가 있는지 미리 알고 있으므로 불일치 부분은 다시 비교하지 않고 매칭
+  - 패턴을 전처리하여 잘못된 부분을  최소화
+  - 시간복잡도 O(M+N)
+
+- 보이어-무어 알고리즘
+
+  - 오른쪽에서 왼쪽으로 비교
+  - 대부분의 사용 프로그램에서 채택
+  - 텍스트를 다 보지 안아도 됨
 
 ### 문자열 암호화
 
