add Model relationships

--- a/Algorithm/그래프.md
+++ b/Algorithm/그래프.md
@@ -24,20 +24,110 @@
 - 그래프 문제에 접근하는 3가지 방법
 
   - 인접 행렬(정점 중심)
-
     - V*V 크기의 2차원 배열 이용
     - 관계성이 없는 정점의 정보도 저장해야 함
-
+    - 유향 그래프의 경우, 행의 합과 열의 합으로 각각 진출 차수, 집입 차수를 구할 수 있음
   - 인접 리스트(정점 중심)
-
     - 각 정점마다 해당 정점으로 나가는 간선의 정보를 저장
     - 정확히 간선 수 만큼만 저장
     - **연결리스트** 활용
     - 인접 행렬에 비해 메모리 절약
-
   - 간선 리스트(간선 중심)
-
     - 간선의 정보(시작 정점, 끝 정점)를 객체로 표현하여 리스트에 저장
 
-    
+  
+
+### BFS
+
+- 탐색 시작점의 인접한 정점들을 먼저 차례로 방문한 후, 방문했던 정점을 시작점으로 하여 다시 인접한 정점들을 차례로 방문
+- 큐에 넣을 때!, 방문처리
+
+```
+BFS(G, v) // 그래프 G, 탐색 시작 정점 v
+		큐 생성
+		시작 정점 v를 큐에 삽입 (주어지지 않는다면 임의의 정점 선택)
+		정점 v를 방문한 것으로 표시
+		while (큐가 비어있지 않은 경우) {
+			t <- 큐의 첫번째 원소 반환
+			for (t와 연결된 모든 간선에 대해){
+					u <- t의 인접 정점
+					u가 방문되지 않은 곳이면,
+					u를 큐에 넣고, 방문한 것으로 표시
+			}
+		}
+end BFS()
+```
+
+
+
+### DFS
+
+- 재귀
+
+  ```
+  G: 그래프
+  DFS(v) // v: 탐색 정점
+  	
+  	visited[v] <- True	// v 방문 설정
+  	
+  	For each all w in adjacency(G, V)
+  		IF visited[w] != True
+  			DFS(w)
+  ```
+
+
+
+### 서로소 집합(Disjoint-sets)
+
+- 서로소 또는 상호배타 집합
+
+- 서로 중복 포함된 원소가 없는 집합
+
+- **집합에 속한 하나의 특정 멤버를 통해 각 집합들을 구분**
+
+  - 이 특정멤버를 **대표자**라고함
+
+- 표현방법
+
+  - 연결리스트
+  - 트리
+    - 하나의 집합을 하나의 트리로 표현
+
+- 서로소 집합 연산
+
+  - Make-Set(x)
+
+    - 자신이 자신의 인덱스 값을 갖도록
+
+    ```
+    Make-Set(x)
+    	p[x] <-x
+    ```
+
+  - Find-Set(x)
+
+    ```
+    Find-Set(x)
+    	IF x == p[x]: RETURN x
+    	ELSE 		: RETURN Find_Set(p[x])
+    ```
+
+  - Union(x, y)
+
+    ```
+    Union(x, y)
+    	p[Find-Set(y)] <- Find-Set(x)
+    ```
+
+- 연산의 효율을 높이는 방법
+
+  - Rank를 이용한 Union
+  - Path compression
+    - 부모를 찾아가는 과정에서 모든 노드의 부모를 최종 부모로 바꿈
+
+
+
+
+
+
 
